2010-05-11 Bruno Renié <bruno@renie.fr> -- 0.4.2

    * KML and GPX inclusion got an autofocus parameter.

2010-05-10 Bruno Renié <bruno@renie.fr> -- 0.4.1

    * docs are included in the package data

2010-05-09 Bruno Renié <bruno@renie.fr> -- 0.4

    * Added KML and GPX rendering to the template library
    * Tests passes with Django 1.2

2010-05-08 Bruno Renié <bruno@renie.fr>

    * Zooming to the correct bounds when features are set to 'invisible'
    * Fixed the 'as map_var' behaviour in the templates
    * Added transitionEffect: 'resize' to all widgets for better UX
    * Fixed setup.py again
    * Removed hardcoded SRID in the admin widget

2010-05-03 Bruno Renié <bruno@renie.fr> -- 0.3.1

    * Fixed setup.py and released 0.3.1
    * Added a form library with rich widgets and relevant docs

2010-05-01 Bruno Renié <bruno@renie.fr>

    * Fixed cross-browser issues by adding a 'geoportal_js' tag

2010-04-24 Bruno Renié <bruno@renie.fr> -- 0.2.3

    * Released 0.2.3

2010-04-08 Bruno Renié <bruno@renie.fr>

    * Changed map_info to be false by default
    * Switched to the hosted version of the JS API
    * Added the PanZoomBar control to all maps in the admin widget
    * Updated the docs and screenshots accordingly

2010-03-03 Bruno Renié <bruno@renie.fr> -- 0.2.2

    * Added some tests for the template rendering
    * Javascript code for maps is completely isolated
    * Added a 'as var_name' to the template tag for further manipulation
    * Added tests (and a bare models.py to prevent the tests to fail)
    * Small fixes in the docs

2010-03-02 Bruno Renié <bruno@renie.fr> -- 0.2.1

    * Fix in the javascript: allowing more than 2 maps per page
    * More robust argument parsing, allowing template variables
    * Added version number at the root of the package
    * Docs -- online at http://packages.python.org/django-geoportail/


2010-03-02 Bruno Renié <bruno@renie.fr> -- 0.2.0

    * Added a template tag for rendering geo* fields