@@ -1,6 +1,6 @@
 from geoportal import utils, admin, templatetags, forms
 
-VERSION = (0, 4, 2)
+VERSION = (0, 4, 3)
 
 
 def get_version():
