@@ -1,3 +1,9 @@
+2010-06-01 Bruno Renié <bruno@renie.fr> -- 0.4.3
+
+    * #2 - Popups are enabled by default on KML and GPX insertion.
+    * #1 - Setting the opacity to a float value no longer crashes French
+      django installations.
+
 2010-05-11 Bruno Renié <bruno@renie.fr> -- 0.4.2
 
     * KML and GPX inclusion got an autofocus parameter.
